-- The name of the package.
name:                fpath

-- The package version.  See the Haskell package versioning policy (PVP)
-- for standards guiding when and how versions should be incremented.
-- http://www.haskell.org/haskellwiki/Package_versioning_policy
-- PVP summary:      +-+------- breaking API changes
--                   | | +----- non-breaking API additions
--                   | | | +--- code changes with no API change
version:             0.0.0.1

-- A short (one-line) description of the package.
synopsis:            Strongly-type file paths

-- A longer description of the package.
-- description:

-- The license under which the package is released.
license:             MIT

-- The file containing the license text.
license-file:        LICENSE

-- The package author(s).
author:              Martyn J. Pearce

-- An email address to which users can send suggestions, bug reports, and
-- patches.
maintainer:          haskell@sixears.com

-- A copyright notice.
-- copyright:

-- category:

build-type:          Simple

-- Extra files to be distributed with the package, such as examples or a
-- README.
-- extra-source-files:

-- Constraint on the version of Cabal needed to build this package.
cabal-version:       >=1.10


library
  ghc-options:     -W -Wall -fhelpful-errors
  -- Modules exported by the library.
  exposed-modules: FPath
                 , FPath.Abs
                 , FPath.AbsDir, FPath.T.FPath.AbsDir
                 , FPath.AbsFile, FPath.T.FPath.AbsFile
                 , FPath.AppendableFPath
                 , FPath.AsFilePath
                 , FPath.Basename
                 , FPath.Dirname
                 , FPath.Dir
                 , FPath.DirType
                 , FPath.File
                 , FPath.FileLike
                 , FPath.FPath
                 , FPath.IO
                 , FPath.Parent
                 , FPath.Parseable
                 , FPath.PathComponent
                 , FPath.Rel
                 , FPath.RelDir, FPath.T.FPath.RelDir
                 , FPath.RelFile, FPath.T.FPath.RelFile
                 , FPath.RelType
                 
                 , FPath.Error.FPathComponentError
                 , FPath.Error.FPathError

                 , FPath.T.FPath
                 , FPath.T.FPath.NonRootAbsDir
                 , FPath.T.FPath.PathComponent
                 , FPath.T.FPath.TestData

  -- modules included in this library but not exported.
  other-modules: FPath.PathCTypes.String
--                 , FPath.PathCTypes.ByteString
--                 , FPath.PathCTypes.ByteStringUtf8
--                 , FPath.PathCTypes.Text
                 , FPath.Util

  default-extensions: NoImplicitPrelude
  -- LANGUAGE extensions used by modules in this package.
  other-extensions:

  -- Other library packages from which modules are imported.
  build-depends: base, base-unicode-symbols, containers, data-textual, directory
               , exceptions, genvalidity, genvalidity-bytestring
               , genvalidity-property, genvalidity-text, lens, mono-traversable
               , mtl, optparse-applicative, parsers, QuickCheck
               , template-haskell, tasty, tasty-hunit, tasty-quickcheck
               , temporary, text, text-printer, unix, validity

               , exited == 1.0.2.0, monaderror-io == 1.0.0.0
               , more-unicode == 0.0.8.0, non-empty-containers == 1.0.0.0
               , tasty-plus == 1.0.1.0, tfmt == 0.2.1.0
  -- Directories containing source files.
  hs-source-dirs:      src

  -- Base language which the package is written in.
  default-language:    Haskell2010

-------------------------------------------------------------------------------

test-suite fpath-test
  ghc-options:      -O2 -W -Wall -fhelpful-errors
  type:             exitcode-stdio-1.0
  hs-source-dirs:   t
  main-is:          fpath-test.hs
  build-depends:    base, fpath, tasty
  default-language: Haskell2010

-------------------------------------------------------------------------------
